--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@capacitor/camera": "^1.2.2",
+    "@capacitor/filesystem": "^1.0.6",
+    "@capacitor/storage": "^1.2.3",
+    "@ionic/pwa-elements": "^3.1.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "core-js": "^3.6.5",
