Added vuex to store response

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "tobbes short",
-    "name": "tobbe",
+    "short_name": "Bolis",
+    "name": "Bolis",
     "display": "standalone",
     "theme_color": "#ffffff",
     "background_color": "#ffffff"
