--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@ionic/vue-router": "^6.0.0",
     "core-js": "^3.6.5",
     "vue": "^3.2.21",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0-rc.1",
